--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "milan.beran@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^8.1"
+    }
 }
